web_py_print_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webpy-print-deploy
  labels:
    app: webpy-print
spec:
  selector:
    matchLabels:
      app: webpy-print
  replicas: 4
  template:
    metadata:
      labels:
        app: webpy-print
    spec:
      containers:
      - name: webpy-print
        image: foodawn/web_py_print:latest
        ports:
        - containerPort: 5000
