init_app_deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: init-app-service
spec:
  selector:
    app: init-app
  ports:
  - protocol: "TCP"
    port: 5001
    targetPort: 5001
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: init-app
spec:
  selector:
    matchLabels:
      app: init-app
  replicas: 4
  template:
    metadata:
      labels:
        app: init-app
    spec:
      containers:
      - name: init-ap
p        image: foodawn/initdb:latest
        ports:
        - containerPort: 5001
