multi_stage_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multistage-service
  labels:
    app: multistage
spec:
  selector:
    app: multistage
  ports:
  - port: 5002
    targetPort: 5002
    protocol: TCP
  type: LoadBalancer
