web_py_print_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webpy-print-service
  labels:
    app: webpy-print
spec:
  selector:
    app: webpy-print
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: LoadBalancer
