web_py_write_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webpy-write-service
  labels:
    app: webpy-write
spec:
  selector:
    app: webpy-write
  ports:
  - port: 5003
    targetPort: 5003
    protocol: TCP
  type: LoadBalancer
