ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /create_db
        pathType: Exact
        backend:
          service:
            name: initpy-service
            port:
              number: 5001
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: webpy-service
            port:
              number: 5000
      - path: /go/
        pathType: Prefix
        backend:
          service:
            name: multistage-service
            port:
              number: 5002
